agregue el main con el bienvenidos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>ADR LAQUEADOS</title>
      <link rel="shortcut icon" href="imgtaller/logoadr.jpg" type="image/x-icon">
     <link rel="stylesheet" href="CSS/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,6 +27,18 @@
   </ul>
  </nav>
     </header>
+
+    <main class="main">
+      <div class="Bienvenidos">
+        <h2>BIENVENIDOS</h2>
+      </div>
+      <div class="adr">
+        <h4>A.D.R LAQUEADOS</h4>
+      </div>
+      <div class="inicioadr">
+        <img src="imgtaller/inicioadr.jpeg" alt="inicioadr" class="inicioadr">
+      </div>
+    </main>
     
 <footer>
     <div class="logoadr2" >
