agregamos info a contacto, modifique index y css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
  </nav>
     </header>
 
-    <main class="main">
+    <main class="mainIndex">
       <div class="Bienvenidos">
         <h2>BIENVENIDOS</h2>
       </div>
