centramos en mobile

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     <div class="logoadr2" >
     <img src="imgtaller/logoadr.jpg" alt="logoadr"  class="logoadr2 p20" >
 </div>
-<div class="rrss p20">
+<div class="rrss">
     <h3>REDES SOCIALES</h3>
     <a href="https://www.instagram.com/adrlaqueados/" target="_blank"><img src="imgtaller/ig.png" alt="ig" class="ig"></a>
   </div>
-  <div class="contacto p20">
+  <div class="contacto">
     <h3>CONTACTO</h3>
     <P class="mail">adrlaqueados@hotmail.com</P>
     <p class="num">11-2644-7058</p>
