centrar imagenes y titulos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
 <footer>
     <div class="logoadr2" >
-    <img src="imgtaller/logoadr.jpg" alt="logoadr"  class="logoadr2 p20" >
+    <img src="imgtaller/logoadr.jpg" alt="logoadr"  class="logoadr2" >
 </div>
 <div class="rrss">
     <h3>REDES SOCIALES</h3>
