agregue img a nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -23,6 +23,12 @@
 </ul>
 </nav>
 </header>
+<main class="gridmainNos">
+<div class="nosotros1">
+<img src="../imgtaller/nosotros1.jpg" alt="nosotros1" class="nosotros1">
+</div>
+
+</main>
 
 <footer>
     <div class="logoadr2" >
