agregue titulo a  nos

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -19,7 +19,7 @@
 <li> <a href="#">NOSOTROS</a></li>
 <li> <a href="pages/productos.html">PRODUCTOS</a></li>
 <li> <a href="pages/servicios.html">SERVICIOS</a></li>
-<li> <a href="pages/contacto.html">CONTACTO</a></li>
+<li> <a href="../pages/contacto.html">CONTACTO</a></li>
 </ul>
 </nav>
 </header>
@@ -27,6 +27,12 @@
 <div class="nosotros1">
 <img src="../imgtaller/nosotros1.jpg" alt="nosotros1" class="nosotros1">
 </div>
+
+<div class="tituloNos">
+<h7>NOSOTROS</h7>
+</div>
+
+
 
 </main>
 
