--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,7 +16,7 @@
      <nav> 
      <ul> 
     <li> <a href="../index.html">INICIO</a></li>
-    <li> <a href="pages/nosotros.html">NOSOTROS</a></li>
+    <li> <a href="../pages/nosotros.html">NOSOTROS</a></li>
     <li> <a href="pages/productos.html">PRODUCTOS</a></li>
     <li> <a href="pages/servicios.html">SERVICIOS</a></li>
     <li> <a href="#">CONTACTO</a></li>
