--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -32,8 +32,28 @@
 <h7>NOSOTROS</h7>
 </div>
 
+<div class="parrafoIzq p20">
+<p class="p">En el año 1985, el Laqueador Abel David Rojas daba comienzo su pequeño taller familiar de forma independiente.
+Con el correr de los años fue adquiriendo experiencia, lo cual, produjo un fuerte incremento de trabajo debido a la satifacción de los clientes.
+Abel y su equipo realizan un trabajo de excelencia y alta calidad ya que cada laqueado requiere dedicación
+y profesionalismo. </p>
+</div>
 
+<div class="imgTexto">
+  <img src="../imgtaller/nosotros2.jpg" alt="nosotros2" class="imgTexto">
+</div>
+<div class="parrafoDer p20">
+<p class="p"> El equipo de ADR Laqueados esta compuesto por Alejandro Panacciulli, Gabriel Panacciulli,
+  Andres Rojas, Esteban Mancuello, Las secretarias Lili Marconi, Mirta Panacciulli y el Fundador Abel David Rojas.
 
+</p>
+
+<div class="imgTexto2">
+
+  <img src="../imgtaller/nosotros3.jpeg" alt="nosotros3" class="imgTexto2">
+
+</div>
+</div>
 </main>
 
 <footer>
