agregue nosotros a vista mobile

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -23,7 +23,7 @@
 </ul>
 </nav>
 </header>
-<main class="gridmainNos">
+<main class="gridmainNos bgPrincipal" >
 <div class="nosotros1">
 <img src="../imgtaller/nosotros1.jpg" alt="nosotros1" class="nosotros1">
 </div>
