--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -17,7 +17,7 @@
 <ul> 
 <li> <a href="../index.html">INICIO</a></li>
 <li> <a href="#">NOSOTROS</a></li>
-<li> <a href="pages/productos.html">PRODUCTOS</a></li>
+<li> <a href="../pages/productos.html">PRODUCTOS</a></li>
 <li> <a href="pages/servicios.html">SERVICIOS</a></li>
 <li> <a href="../pages/contacto.html">CONTACTO</a></li>
 </ul>
