--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="imgtaller/logoadr.jpg" alt="logo adr" class="logoadr">
 
  <nav> 
- <ul> 
+ <ul class="Principal"> 
 <li> <a href="index.html">INICIO</a></li>
 <li> <a href="pages/nosotros.html">NOSOTROS</a></li>
 <li> <a href="pages/productos.html">PRODUCTOS</a></li>
