--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -14,7 +14,7 @@
     <img src="../imgtaller/logoadr.jpg" alt="logo adr" class="logoadr">
 
 <nav> 
-<ul> 
+<ul class="Principal"> 
 <li> <a href="../index.html">INICIO</a></li>
 <li> <a href="#">NOSOTROS</a></li>
 <li> <a href="../pages/productos.html">PRODUCTOS</a></li>
