--- a/pages/productos.html
+++ b/pages/productos.html
@@ -13,7 +13,7 @@
         <img src="../imgtaller/logoadr.jpg" alt="logo adr" class="logoadr">
     
     <nav> 
-    <ul> 
+    <ul class="Principal"> 
     <li> <a href="../index.html">INICIO</a></li>
     <li> <a href="../pages/nosotros.html">NOSOTROS</a></li>
     <li> <a href="#">PRODUCTOS</a></li>
