--- a/pages/productos.html
+++ b/pages/productos.html
@@ -23,6 +23,24 @@
     </nav>
     </header>
 
+    <div class="tituloProdu bgPrincipal">
+        <h8>PRODUCTOS</h8>
+        </div>
+        
+        <main class="gridmainProdu bgPrincipal">
+
+            <div class="prod prodA">
+                <h9 class="h9">PRODUCTO A</h9>
+                <img src="../imgtaller/producto1.jpeg" alt="producto1" class="imgfluid">
+            </div>
+            <div class="prod prodB">
+                <h9 class="h9">PRODUCTO B</h9>
+                <img src="../imgtaller/producto1.jpeg" alt="producto1" class="imgfluid">
+            </div>
+
+    </main>
+
+
 
     <footer>
         <div class="logoadr2" >
