--- a/pages/productos.html
+++ b/pages/productos.html
@@ -17,7 +17,7 @@
     <li> <a href="../index.html">INICIO</a></li>
     <li> <a href="../pages/nosotros.html">NOSOTROS</a></li>
     <li> <a href="#">PRODUCTOS</a></li>
-    <li> <a href="pages/servicios.html">SERVICIOS</a></li>
+    <li> <a href="../pages/servicios.html">SERVICIOS</a></li>
     <li> <a href="../pages/contacto.html">CONTACTO</a></li>
     </ul>
     </nav>
