--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,7 +18,7 @@
     <li> <a href="../index.html">INICIO</a></li>
     <li> <a href="../pages/nosotros.html">NOSOTROS</a></li>
     <li> <a href="../pages/productos.html">PRODUCTOS</a></li>
-    <li> <a href="pages/servicios.html">SERVICIOS</a></li>
+    <li> <a href="../pages/servicios.html">SERVICIOS</a></li>
     <li> <a href="#">CONTACTO</a></li>
       </ul>
      </nav>
