--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </main>
     
 <footer>
-    <div class="logoadr2" >
+    <div class="logoadr2 p20" >
     <img src="imgtaller/logoadr.jpg" alt="logoadr"  class="logoadr2" >
 </div>
 <div class="rrss">
