--- a/pages/productos.html
+++ b/pages/productos.html
@@ -43,8 +43,8 @@
 
 
     <footer>
-        <div class="logoadr2" >
-        <img src="../imgtaller/logoadr.jpg" alt="logoadr"  class="logoadr2 p20" >
+        <div class="logoadr2 p20" >
+        <img src="../imgtaller/logoadr.jpg" alt="logoadr"  class="logoadr2" >
     </div>
     <div class="rrss p20">
         <h3>REDES SOCIALES</h3>
