--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -54,8 +54,8 @@
 
 </main>
 <footer>
-    <div class="logoadr2" >
-    <img src="../imgtaller/logoadr.jpg" alt="logoadr"  class="logoadr2 p20" >
+    <div class="logoadr2 p20" >
+    <img src="../imgtaller/logoadr.jpg" alt="logoadr"  class="logoadr2" >
 </div>
 <div class="rrss p20">
     <h3>REDES SOCIALES</h3>
