--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -33,18 +33,18 @@
 </div>
 
 <div class="parrafoIzq p20">
-<p class="p">En el año 1985, el Laqueador Abel David Rojas daba comienzo su pequeño taller familiar de forma independiente.
-Con el correr de los años fue adquiriendo experiencia, lo cual, produjo un fuerte incremento de trabajo debido a la satifacción de los clientes.
-Abel y su equipo realizan un trabajo de excelencia y alta calidad ya que cada laqueado requiere dedicación
-y profesionalismo. </p>
+<p class="p">Este emprendimiento familiar arrancó en el año 1985 a cargo de Abel David Rojas, Laqueador. 
+Con el correr de los años, gracias a la satifacción de los clientes, ADR Laqueados incrementó su trabajo.
+Cada laqueado requiere dedicación, paciencia, profecionalismo y excelencia de lo cual, el equipo 
+cumple a la perfección. </p>
 </div>
 
 <div class="imgTexto">
   <img src="../imgtaller/nosotros2.jpg" alt="nosotros2" class="imgTexto">
 </div>
 <div class="parrafoDer p20">
-<p class="p"> El equipo de ADR Laqueados esta compuesto por Alejandro Panacciulli, Gabriel Panacciulli,
-  Andres Rojas, Esteban Mancuello, Las secretarias Lili Marconi, Mirta Panacciulli y el Fundador Abel David Rojas.
+<p class="p"> El equipo de Abel esta compuesto por cuatro operadores: Alejandro Panacciulli, Gabriel Panacciulli,
+  Andres Rojas y Esteban Mancuello. Dos recepcionistas: Liliana Marconi y Mirta Panacciulli.
 
 </p>
 
