modifico  texto en nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -33,9 +33,9 @@
 </div>
 
 <div class="parrafoIzq p20">
-<p class="p">Este emprendimiento familiar arrancó en el año 1985 a cargo de Abel David Rojas, Laqueador. 
-Con el correr de los años, gracias a la satifacción de los clientes, ADR Laqueados incrementó su trabajo.
-Cada laqueado requiere dedicación, paciencia, profecionalismo y excelencia de lo cual, el equipo 
+<p class="p">Este emprendimiento familiar arrancó en el año 1985 a cargo de Abel David Rojas, de oficio, laqueador. 
+Con el correr de los años, gracias a la satifacción de los clientes, ADR Laqueados incrementó su trabajo de manera exponencial.
+Cada laqueado requiere dedicación, trabajo minucioso, paciencia y profesionalismo lo cual, el equipo 
 cumple a la perfección. </p>
 </div>
 
@@ -44,7 +44,7 @@ cumple a la perfección. </p>
 </div>
 <div class="parrafoDer p20">
 <p class="p"> El equipo de Abel esta compuesto por cuatro operadores: Alejandro Panacciulli, Gabriel Panacciulli,
-  Andres Rojas y Esteban Mancuello. Dos recepcionistas: Liliana Marconi y Mirta Panacciulli.
+  Andres Rojas y Esteban Mancuello; y dos recepcionistas: Liliana Marconi y Mirta Panacciulli.
 
 </p>
 
