--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -44,7 +44,7 @@ cumple a la perfección. </p>
 </div>
 <div class="parrafoDer p20">
 <p class="p"> El equipo de Abel esta compuesto por cuatro operadores: Alejandro Panacciulli, Gabriel Panacciulli,
-  Andres Rojas y Esteban Mancuello; y dos recepcionistas: Liliana Marconi y Mirta Panacciulli.
+  Andres Rojas y Esteban Bravo; y dos recepcionistas: Liliana Marconi y Mirta Panacciulli.
 
 </p>
 
